SG-2004-04-22-2: Bugfix:   - fixed memory leak in berkeleydb spooling for jobs
                           - fixed memory leak in qsub 
                 Changed:  qmaster, qsub
                 Review:   AS, DT

SG-2004-04-22-1: Bugfix:   fixed memory leak cluster queue modification
                 Changed:  qmaster
                 Review:   DT, EB

HP-2004-04-22-0: Enhancem.: Added Docu for delegated file staging

JG-2004-04-22-1: Bugfix:    qmake output warning "cannot determine architecture"
                            even if the commandline contained an explicit 
                            resource request.
                            Now read from environment variable SGE_ARCH instead
                            of ARCH.
                 Review:    patch submitted by uddeborg
                 Issue:     983
                 Bugfix:    fixed aimk.site for HP11
                 Review:    AS
                 Bugfix:    Fixed automatic installation.
                 Review:    MD

AA-2004-04-22-0: Bugfix:    - loadadjustments display of load values was broken
                 Changed:   qmon
                 Review:    SG

SG-2004-04-22-0: Bugfix:    - fixed memory leak in sge_event_master
                            - added a cleanup method for all lists on qmaster
                              shutdown
                            - scheduler would exit, if the qmaster is gone for
                              a while
                 Changed:   qmaster, schedd
                 Review:    CR, AD

MD-2004-04-22-0: Bugfix:    LD_LIBRARY_PATH was wrong. -> wrong ARCH string
                            job check during uninstall, if rescheduled or no
                 Review:    JG
                 Changed:   rc_templates

CR-2004-04-22-0: Bugfix:    qping now also supports auto close when qmaster
                            runs out of filedescriptors

DT-2004-04-22-1: Bugfix:    o Minor bugs fixes to event master